--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -4,6 +4,7 @@
   height: 150px;
   perspective: 1000px;
   margin: 20px;
+  
 }
 
 .card {
@@ -14,6 +15,7 @@
   transition: transform 1s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 4px;
 }
 
 .card-container:hover .card {
@@ -31,10 +33,17 @@
 .front {
   background-color: #ff6f61;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .back {
   background-color: #3b8271;
   color: white;
   transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
